--- a/home.html
+++ b/home.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="home.css">
 </head>
 <body>
-    <div><img src=""></div>
-    <div>
-    
-    </div>
+    <div class="logo"><img src=""></div>
+    <nav>
+        <ul>
+            <li><a href="">home</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Career</a></li>
+            <li><a href="">Contact Us</a></li>
+        </ul>
+    </nav>
     
 </body>
 </html>
