my first acctual content

--- a/home.html
+++ b/home.html
@@ -16,6 +16,9 @@
             <li><a href="">Contact Us</a></li>
         </ul>
     </nav>
+    <table>
+    <h1>home</h1>
+    <p>Here at Arawa Hospital we are commited to give quality health care to Our patients and offer safety</p>
     
 </body>
 </html>
